Fix HTML and style for correct alignment of list items

--- a/app/assets/sass/defra/_guidance.scss
+++ b/app/assets/sass/defra/_guidance.scss
@@ -44,3 +44,6 @@ h4.guidance-heading {
     margin-top: 0x;
   }
 }
+.govuk-summary-list__key, .govuk-summary-list__value {
+  vertical-align: top;
+}
